--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-plugin-react": "^5.2.2"
   },
   "dependencies": {
+    "babel-loader": "^6.2.4",
     "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
